# agent-db

./: .gitignore  README.md  pyproject.toml
.specstory/history/: 2026-01-20_06-06Z-项目实现优化.md
config/: databases.example.yaml
docs/plans/: 2026-01-16-ai-native-data-platform.md
src/agent_db/: __init__.py  __main__.py  service.py
src/agent_db/adapters/: __init__.py  factory.py  influxdb.py  milvus.py  mysql.py  nebula.py  neo4j.py  postgresql.py  protocol.py  qdrant.py
src/agent_db/api/: __init__.py  app.py  profiling_routes.py  routes.py
src/agent_db/engine/: __init__.py  executor.py  intent.py  interpreter.py  planner.py
src/agent_db/identity/: __init__.py  models.py  resolver.py  store.py
src/agent_db/llm/: __init__.py  provider.py
src/agent_db/metadata/: __init__.py  models.py  store.py
src/agent_db/profiling/: __init__.py  engine.py  sampler.py  scheduler.py  service.py  sql_templates.py
src/agent_db/semantic/: __init__.py  loader.py  models.py
tests/: test_service.py
tests/adapters/: test_adapters.py  test_protocol.py
tests/api/: test_routes.py
tests/engine/: test_engine.py
tests/fixtures/: sample_schema.yaml
tests/identity/: __init__.py  test_identity.py
tests/integration/: __init__.py  test_query_flow.py
tests/llm/: test_provider.py
tests/metadata/: test_models.py  test_store.py
tests/profiling/: __init__.py  test_api.py  test_distribution.py  test_engine.py
tests/semantic/: test_loader.py  test_models.py
